# docs/v1/swagger.yaml
@@ -5611,6 +5611,34 @@ paths:
       summary: 智能体对话列表
       tags:
       - agent
+  /assistant/copy:
+    post:
+      consumes:
+      - application/json
+      description: 复制智能体，创建一个新的智能体，基本信息和配置都和原智能体一致
+      parameters:
+      - description: 智能体id
+        in: query
+        name: assistantId
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/response.AssistantCreateResp'
+              type: object
+      security:
+      - JWT: []
+      summary: 复制智能体
+      tags:
+      - agent
   /assistant/stream:
     post:
       consumes:
