# internal/bff-service/server/http/handler/router/v1/assistant.go
@@ -19,6 +19,7 @@ func registerAssistant(apiV1 *gin.RouterGroup) {
 	mid.Sub("agent").Reg(apiV1, "/assistant", http.MethodPut, v1.AssistantUpdate, "修改智能体基本信息")
 	mid.Sub("agent").Reg(apiV1, "/assistant/config", http.MethodPut, v1.AssistantConfigUpdate, "修改智能体配置信息")
 	mid.Sub("agent").Reg(apiV1, "/assistant", http.MethodGet, v1.GetAssistantInfo, "查看智能体详情")
+	mid.Sub("agent").Reg(apiV1, "/assistant/copy", http.MethodPost, v1.AssistantCopy, "智能体复制")
 
 	mid.Sub("agent").Reg(apiV1, "/assistant/tool/workflow", http.MethodPost, v1.AssistantWorkFlowCreate, "添加工作流")
 	mid.Sub("agent").Reg(apiV1, "/assistant/tool/workflow", http.MethodDelete, v1.AssistantWorkFlowDelete, "删除工作流")
